--- a/index.html
+++ b/index.html
@@ -365,9 +365,9 @@
             </div>
         </section>
     </main>
+<!--main done-->
 
-
-    <!--footer-->
+    <!--footer section-->
     <footer class="bg-black text-white space-y-5">
         <div class="flex flex-col text-center items-center lg:flex-row pt-16  pb-4 space-y-5 justify-around">
             <div>
